--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@ avatar: https://raw.githubusercontent.com/u/gawade-neha
 footer-links:
   dribbble:
   email: gawade.neha@csu.fullerton.edu
-  facebook: https://www.facebook.com/neha.gawade.13
+  facebook: neha.gawade.13
   flickr:
-  github: https://github.com/gawade-neha
+  github: gawade-neha
   instagram:
-  linkedin: https://www.linkedin.com/in/nehagawade/
+  linkedin: nehagawade
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
@@ -41,7 +41,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://gawade-neha.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
