--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Neha Gawade
 description: Web Developer from California
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/u/gawade-neha
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/avatar.jpg
 
 #
 # Flags below are optional
