--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,11 @@ footer-links:
   facebook: neha.gawade.13
   flickr:
   github: gawade-neha
-  instagram:
+  instagram: nehagawade
   linkedin: nehagawade
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: 
+  twitter: gawadeneha13
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
