--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Neha Gawade
 
 # Short bio or description (displayed in the header)
-description: Web Developer from California
+description: Software Developer from California
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/gawade-neha/gawade-neha.github.io/master/images/avatar.png
